--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -16,4 +16,6 @@ jobs:
       - name: Install and Build
         run: npm install
       - name: Deploy 
-        run: npm run deploy-storybook
+        run: |
+          npm run build-storybook
+          npm run deploy-storybook
