Removed gh-pages + a new CI

--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
     "build": "npm run clean && ts-node scripts/build.ts && tsc --emitDeclarationOnly --outDir dist",
     "preview": "npm run build && vite serve ./public",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
-    "predeploy": "npm run build-storybook",    
-    "deploy-storybook": "gh-pages -d storybook-static"
+    "build-storybook": "build-storybook"
   },
   "files": [
     "dist"
@@ -37,7 +35,6 @@
     "chokidar": "^3.5.3",
     "esbuild": "^0.15.13",
     "esbuild-css-modules-plugin": "^2.6.2",
-    "gh-pages": "^4.0.0",
     "react-dom": "^18.2.0",
     "react-live": "^3.1.1",
     "rimraf": "^3.0.2",
