--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -9,13 +9,15 @@ jobs:
   build-and-deploy:
     runs-on: [self-hosted,linux]
     steps:
-      - name: Checkout 
-        uses: actions/checkout@v2.3.1
-        with:
-          persist-credentials: false
+      - name: Checkout
+        uses: actions/checkout@v3
+
       - name: Install and Build
-        run: npm install
-      - name: Deploy 
         run: |
+          npm i
           npm run build-storybook
-          npm run deploy-storybook
+
+      - name: Deploy 
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: storybook-static
