--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -20,4 +20,5 @@ jobs:
       - name: Deploy 
         uses: JamesIves/github-pages-deploy-action@v4
         with:
+          branch: gh-pages
           folder: storybook-static
