--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,6 @@
     "devCommand": "npm run storybook",
     "installCommand": "npm install",
     "framework": null,
-    "outputDirectory": "./storybook-static"
+    "outputDirectory": "storybook-static"
 }
   
