Updated package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-fishbone",
+  "name": "@hophiphip/react-fishbone",
   "version": "0.1.0",
   "description": "React fishbone (Ishikawa) diagram component",
   "homepage": "https://github.com/hophiphip/react-fishbone",
