--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@hophiphip/react-fishbone",
+  "private": false,
   "version": "0.1.0",
   "description": "React fishbone (Ishikawa) diagram component",
   "homepage": "https://github.com/hophiphip/react-fishbone",
