--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "esbuild-css-modules-plugin": "^2.6.2",
     "eslint": "^8.27.0",
     "eslint-plugin-react": "^7.31.10",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-live": "^3.1.1",
     "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
@@ -61,7 +62,6 @@
     "vite": "^3.2.2"
   },
   "dependencies": {
-    "d3": "^7.6.1",
-    "react": "^18.2.0"
+    "d3": "^7.6.1"
   }
 }
