--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,11 @@
 	},
 	"files": {
 		"ignoreUnknown": false,
-		"ignore": []
+		"ignore": [
+			"dist",
+			"dist-dev",
+			"node_modules"
+		]
 	},
 	"formatter": {
 		"enabled": true,
