--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -13,6 +13,7 @@
 		"isolatedModules": true,
 		"moduleDetection": "force",
 		"noEmit": true,
+		"emitDeclarationOnly": false,
 
 		/* Linting */
 		"strict": true,
