--- a/packages/react-fishbone/package.json
+++ b/packages/react-fishbone/package.json
@@ -23,6 +23,7 @@
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
 		"@vitejs/plugin-react": "^4.3.1",
+		"glob": "^11.0.0",
 		"globals": "^15.9.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
