--- a/packages/react-fishbone/package.json
+++ b/packages/react-fishbone/package.json
@@ -15,6 +15,7 @@
 		"./package.json": "./package.json"
 	},
 	"scripts": {
+		"prepare": "pnpm run build",
 		"preinstall": "npx only-allow pnpm",
 		"build": "tsc -b && vite build",
 		"dev": "vite --config ./vite.dev.config.ts"
