--- a/package.json
+++ b/package.json
@@ -1,30 +1,33 @@
 {
-  "name": "root",
-  "private": true,
-  "type": "module",
-  "license": "MIT",
-  "author": "hophiphip",
-  "packageManager": "pnpm@8.2.0",
-  "description": "Fishbone (Ishikawa) diagram layout",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/hophiphip/react-fishbone"
-  },
-  "bugs": {
-    "url": "https://github.com/hophiphip/react-fishbone/issues"
-  },
-  "homepage": "https://github.com/hophiphip/react-fishbone",
-  "keywords": [
-    "React",
-    "fishbone"
-  ],
-  "scripts": {
-    "preinstall": "npx only-allow pnpm",
-    "format": "pnpm biome format packages/* --write",
-    "fishbone-layout": "pnpm --filter fishbone-layout",
-    "react-fishbone": "pnpm --filter react-fishbone"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "1.9.3"
-  }
+    "name": "root",
+    "private": true,
+    "type": "module",
+    "license": "MIT",
+    "author": {
+        "name": "hophiphip",
+        "email": "hophiphip.dev@gmail.com"
+    },
+    "packageManager": "pnpm@8.2.0",
+    "description": "Fishbone (Ishikawa) diagram layout",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/hophiphip/react-fishbone"
+    },
+    "bugs": {
+        "url": "https://github.com/hophiphip/react-fishbone/issues"
+    },
+    "homepage": "https://github.com/hophiphip/react-fishbone",
+    "keywords": [
+        "React",
+        "fishbone"
+    ],
+    "scripts": {
+        "preinstall": "npx only-allow pnpm",
+        "format": "pnpm biome format packages/* --write",
+        "fishbone-layout": "pnpm --filter fishbone-layout",
+        "react-fishbone": "pnpm --filter react-fishbone"
+    },
+    "devDependencies": {
+        "@biomejs/biome": "1.9.3"
+    }
 }
