--- a/packages/react-fishbone/package.json
+++ b/packages/react-fishbone/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@hophiphip/react-fishbone",
 	"private": false,
-	"version": "0.5.2",
+	"version": "0.5.3",
 	"type": "module",
 	"main": "./dist/index.js",
 	"types": "./dist/index.d.ts",
@@ -40,5 +40,8 @@
 	"dependencies": {
 		"@xyflow/react": "^12.3.1"
 	},
-	"files": ["dist", "src"]
+	"files": [
+		"dist",
+		"src"
+	]
 }
